--- a/Praca_magisterska.tex
+++ b/Praca_magisterska.tex
@@ -15,35 +15,31 @@
 
 \usepackage{polski}
 \usepackage[polish]{babel}
-%\usepackage{fontspec}
-%\usepackage[nosingleletter]{impnattypo}
-\usepackage{hyper/ref}
-\hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=magenta,      
-	urlcolor=cyan,
-}
 % dr ratajczak
 % ziomek
 
+
 \author{Wojciech Sopot 235291}
-\title{Filtry cząsteczkowe i ich zastosowanie w lokalizacji}
+\title{Filtry cząsteczkowe i ich zastosowania w problemach wyznaczania lokalizacji}
 \begin{document}
 \maketitle
 \tableofcontents
 \newpage
-\section{Wprowadzenie}W rozdziale przedstawiono podstawowe zadania i problemy wyznaczania lokalizacji oraz ogólną ideę stojącą za filtrami cząsteczkowymi - filtrację bayesowską.
+\section{Wprowadzenie}W rozdziale przedstawiono cel i zakres pracy oraz podstawowe zadania i problemy wyznaczania lokalizacji. Ponadto opisano ogólną ideę stojącą za filtrami cząsteczkowymi - filtrację bayesowską. 
 \subsection{Zadania i problemy wyznaczania lokalizacji}
 Mogłoby się wydawać, iż w dzisiejszych, gdy mamy możliwość korzystania z systemu GPS, nie ma potrzeby zajmować się innymi sposobami wyznaczania lokalizacji. Jednak o ile jest to prawdą w dużej skali, jak np. gdy chce się wyznaczyć adres w mieście pod którym się znajdujemy, to gdy chcemy wyznaczyć swoją lokalizację bardziej dokładnie, np. jak to robią niektóre odkurzacze mobilne, to trzeba wykorzystać do tego dane z innych sensorów, np. lidarów. Czasami można wcale nie mieć możliwości korzystania z systemu GPS, na przykład pod wodą. Innym problemem może być poprawa już znanego przybliżonego położenia. W pracy zostaną przeanalizowane dwa problemy związane z wyznaczaniem lokalizacji:
 \begin{itemize}
-	\item Określanie położenia samolotu, na podstawie znanej mapy wysokościowej terenu, odczytów z wysokościomierza barometrycznego, oraz, ewentualnie, dodatkowych danych (np. odczytu z kompasu). Warto zauważyć, iż jest to problem analogiczny do łodzi podwodnej orientującej się na podstawie odległości od dna.
+	\item Określanie położenia samolotu, na podstawie znanej mapy wysokościowej terenu, odczytów z wysokościomierza barometrycznego, oraz, ewentualnie, dodatkowych danych (np. odczytu z kompasu). 
 	\item Określanie lokalizacji robota mobilnego, umieszczonego w ograniczonej przestrzeni z przeszkodami (ale na płaskiej powierzchni - mapa jest w dwóch wymiarach).
 \end{itemize}
+Mimo tego, iż są to jedynie dwa przypadki, w praktyce można je uogólnić na wile przypadków. Dla przykładu w \cite{underwater_pf} zajęto się problemem lokalizacji pod wodą, który w praktyce można rozwiązać w ten sam sposób co problem samolotu - mapa wysokości zostaje jedynie zastąpiona przez mapę głębokości.
 \subsection{Cel pracy}
+Celem pracy jest rozpoznanie możliwości zastosowania filtrów cząsteczkowych do rozwiązywania problemu lokalizacji oraz samodzielne zaimplementowanie i przebadanie kilku, uznanych arbitralnie przez autora za najciekawsze.
 \subsection{Zakres pracy}
-\subsection{Filtracja Bayesowska}
-Na chwilę obecną, algorytmy oparte o filtrację Bayesowską są szeroko wykorzystywane w automatyce i robotyce. W skrócie, podejście to polega na przeprowadzaniu cykli predykcji i poprawek na podstawie znanego a priori stanu, oraz zbieranych w kolejnych iteracjach pomiarów. Ideę tego podejścia widać na rysunku \ref{bayes_fil_idea}. 
+W zakres pracy wchodzi przegląd literatury na temat filtrów cząsteczkowych pod kątem problemów wyznaczania lokalizacji, następnie wybranie kilku rozwiązań oraz ich przebadanie. Aby było to możliwe konieczny jest także przegląd znanych narzędzi programistycznych, które mogą być zastosowane do zaimplementowania algorytmów.
+
+\subsection{Idea filtracji Bayesowskiej}
+Na chwilę obecną, algorytmy oparte o filtrację Bayesowską są szeroko wykorzystywane w automatyce i robotyce. W skrócie, podejście to polega na przeprowadzaniu cykli predykcji i poprawek, na podstawie rozkładu a priori oraz zbieranych w kolejnych iteracjach pomiarów, w celu wyznaczenia rozkładu a posteriori stanu. Ideę tego podejścia widać na rysunku \ref{bayes_fil_idea}. 
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=10cm]{./predict_update.png}
@@ -51,7 +47,7 @@ Na chwilę obecną, algorytmy oparte o filtrację Bayesowską są szeroko wykorz
 		\label{bayes_fil_idea}
 	\end{center}
 \end{figure}
-Na rysunku \ref{filtr_hier} przedstawiono hierarchię rozwiązać opartych o to podejście. W pracy zostaną poruszone metody oparte o filtry cząsteczkowe.
+Na rysunku \ref{filtr_hier} przedstawiono hierarchię rozwiązać opartych o to podejście. Jak widać jest to bardzo duża rodzina rozwiązań, znajdujący  W pracy zostaną poruszone metody oparte o filtry cząsteczkowe.
 \begin{figure}
 	\begin{center}
 		\includegraphics[width=10cm]{./nfg001.jpg}
@@ -76,31 +72,32 @@ System taki, można opisać w następujący sposób
 		Y_k=h(X_k)+V_k
 	\end{aligned}
 \end{equation*}
-TODO małą gdzie $g$ i $h$ to znane funkcje, a $W_{k-1}$ i $V_k$ to szumy. Jeśli oba szumy byłyby z rozkładu normalnego, a $g$ i $h$ są liniowe, to problem można rozwiązać za pomocą filtru Kalmana. Aby zyskać na ogólności, System można opisać w następujący sposób:
+gdzie $g$ i $h$ to znane funkcje, a $W_{k-1}$ i $V_k$ to szumy. Jeśli oba szumy byłyby z rozkładu normalnego, a $g$ i $h$ są liniowe, to problem można rozwiązać za pomocą filtru Kalmana. Aby zyskać na ogólności, system można opisać w następujący sposób:
 \begin{equation}
 	\begin{aligned}
 		X_k=g(X_{k-1}, W_{k-1}) \\
 		Y_k=h(X_k, V_k)
 	\end{aligned}
 \end{equation}
-
-\subsection{MAtematyczny opis filtracji Bayesowska}
-Ogólne wzory na filtrowanie Bayesowskie:
-\begin{equation}
-	p(X_k|Y_{0...k})=\frac{p(Y_k|X_k)p(X_k)}{p(Y_k|Y_{0...k-1})}
+Taki problem, gdy funkcje $g$ i $h$ mogą być nieliniowe względem $X_k$, $Y_k$ oraz szumów $W_{k-1}$ i $V_k$, zazwyczaj jest zbyt złożony aby można było zastosować podejścia oparte o filtr kalmana. W takich przypadkach jedną z możliwości jest zastosowanie filtrów cząsteczkowych.
+\subsection{Matematyczny opis filtracji Bayesowskiej}
+Ogólne wzory na filtrowanie Bayesowskie można znaleźć na przykład na wikipedi \cite{wiki_bayes_filter}. Celem pojedynczego kroku filtracji jest wyznaczenie rozkładu a posteriori $p(X_{k}|Y_{0...k})$ opisującego prawdopodobieństwo, że system jest w stanie $X_k$, przy założeniu historii pomiarów $Y_{0...k}$, na podstawie rozkładu a priori $p(X_{k-1}|Y_{0...k-1})$ uzyskanego w poprzednim kroku. Etap predykcji można opisać poniższym równaniem:
+\begin{equation} \label{evolution}
+	p(X_k|Y_{0...k-1})=\int p(X_k|X_{k-1})p(X_{k-1}|Y_{0...k-1}) dX_{k-1}
 \end{equation}
+gdzie $p(X_k|X_{k-1})$ opisuje ewolucję systemu między krokami $k-1$ i $k$. Etap korekcji realizuje się w oparciu o wzór Bayesa, po otrzymaniu kolejnego pomiaru $Y_k$:
+\begin{equation}\label{bayes_formula}
+	p(X_k|Y_{0...k})=\frac{p(Y_k|X_k)p(X_k|Y_{0...k-1})}{p(Y_k|Y_{0...k-1})}
+\end{equation}
+gdzie $p(Y_k|X_k)$ opisuje rozkład prawdopodobieństwa uzyskania pomiaru $Y_k$ w stanie $X_k$. Warto zauważyć, iż $p(Y_k|Y_{0...k})$ można opisać wzorem:
 \begin{equation}
 p(Y_k|Y_{0...k})=\int p(Y_k|X_k)p(X_k|Y_{0...k-1}) dX_k
 \end{equation}
-\begin{equation}
-p(X_k|Y_{0...k-1})=\int p(X_k|X_{k-1})p(X_{k-1}|Y_{0...k-1}) dX_{k-1}
-\end{equation}
-TODO cytat
-Można zauważyć, iż wzór (3) jest stały względem $X_k$, jest to, tak zwana stała normalizacyjna. Wiedząc to, i podstawiając wzory (3) i (4) do (2) uzyskujemy:
+więc mianownik równania \ref{bayes_formula} jest stały względem $X_k$. Mając to na uwadze, oraz podstawiając równanie \ref{evolution} do \ref{bayes_formula} można uzyskać ogólną formułę jednego kroku filtracji:
 \begin{equation}
 	p(X_k|Y_{0...k})=\mu p(Y_k|X_k)\int p(X_k|X_{k-1})p(X_{t-1}|Y_{0...t-1}) dX_{t-1}
 \end{equation}
-Gdzie $\mu$ jest stałą normalizacyjną.
+gdzie $\mu$ jest stałą normalizacyjną, pozostałą po przyjęciu że $p(Y_k|Y_{0...k})$ ma stałą wartość.
 \subsection{Importance sampling i regularyzacja}
 Równanie (5) stanowi podstawę konstrukcji wielu algorytmów....\\
 Istotna trudność w jego zastosowaniu polega jednak na tym, 
@@ -125,6 +122,8 @@ Początkowo całą populację cząstek inicjuje się cząstkami z losowymi stana
 	\end{equation*}
 	Jeśli jej wartość jest mniejsza, niż pewien próg, to przeprowadza się ponowne próbkowanie, generując nową populację cząstek (jest to sztuczka pozwalająca na ograniczenie liczby obliczeń, teoretycznie próbkowanie można przeprowadzać co iterację).
 \end{enumerate}
+
+\subsection{Przykład}
 
 
 \subsection{Adaptacyjna liczba cząstek}
@@ -172,20 +171,24 @@ W \cite{pfgen} zaproponowano, aby wzbogacić proces próbkowania o operatory krz
 \section{Badania} \label{przeg}
 Będę badać wpływ kolejnych usprawnień znalezionych w literaturze, obrazki + tabelki.
 \subsection{Badania poprawności działania}
+Sprawdzenie czy spełnione sa warunki brzegowe
 \subsubsection{Wpływ generatora}
 mam nadzieję, że będzie tak samo XD
 \subsubsection{Brak pkt odniesienia}
 wiele równoważnych położeń
 \subsubsection{Brak ewolucji systemu}
 Powinny się pojawić izolinie.
+\subsubsection{Pomiary bez związku}
+powinien pozostać jednostajny szum
 
 \subsection{Wpływ sposobu estymowania położenia}
-\subsection{Wpływ sposobu estymowania położenia}
+\subsection{Wpływ funkcji określającej błąd pomiaru}
 \subsection{Wpływ liczby cząstek}
 \subsection{Wpływ metody próbkowania}
 \subsection{Skuteczność w poprawianiu błędnie określonego położenia}
 \subsection{Wpływ szumu}
 \subsection{Wpływ różnorodności terenu}
+\subsection{Rozkład p przy dryfie - chodzi o genetyczne}
 
 \section{Wnioski}
 \begin{itemize}
