--- a/tekst/wybrane_narzędzia_programistyczne.tex
+++ b/tekst/wybrane_narzędzia_programistyczne.tex
@@ -1,1 +1,3 @@
-\chapter{Wybrane narzędzia programistyczne}
+\chapter{Przygotowane oprogramowanie}
+\section{Wybrane narzędzia programistyczne}
+\section{Opis przygotowanej biblioteki}
