--- a/tekst/wnioski.tex
+++ b/tekst/wnioski.tex
@@ -1,11 +1,10 @@
-\chapter{Wnioski}
+\chapter{Podsumowanie}
+\section{Wnioski}
 \begin{itemize}
 	\item 
 \end{itemize}
-\section{Podsumawanie}
-co w kolejnych rozdziałach
 
-\chapter{Kierunki przyszłych badań}
+\section{Kierunki przyszłych badań}
 \begin{itemize}
 	\item Zrezygnowanie z implementacji C++ na rzecz całkowitego przejścia na Python, z wykorzystaniem na przykład pakietu Numba \cite{numba}. Poza przyspieszeniem porównywalnym z C++, pozwoliło by na przykład na poszerzanie kodu o obliczenia na karcie graficznej. Dzięki temu, można by spróbować rozwiązać problem robota w pokoju, wykorzystując Box Particle Filter.
 	\item zamiast avg, np klasteryzacja?
