bpf for 2d robot

--- a/tekst/badania.tex
+++ b/tekst/badania.tex
@@ -26,7 +26,7 @@ O ile nie będzie napisane inaczej, samolot w lewym dolnym rogu mapy, miał prę
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=10cm]{./przykladowa_mapa_wroclawia.png}
-		\caption{Przykładowa mapa wysokościowa fragmentu Wrocławia}
+		\caption{Mapa wysokościowa fragmentu Wrocławia}
 		\label{przykladowa_mapa_wroclawia}
 	\end{center}
 \end{figure}
